# farmland-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  schema.yml
farmland_api/: asgi.py  settings.py  urls.py  wsgi.py
src/: admin.py  constants.py  exceptions.py  managers.py  mixins.py  models.py  serializers.py  urls.py  validators.py  views.py
src/fixtures/: farmers.json  farms.json  locations.json
src/migrations/: 0001_initial.py
tests/: conftest.py  test_constants.py  test_initial.py  test_models.py  test_serializers.py  test_validators.py
tests/views/: test_farmer.py  test_farms.py  test_location.py
